Remove child combinator selector
Relax selector specificity; allow a descendant selector rather than an immediate child selector. Given named elements, it allows greater nesting within the markup. Onus is on the developer **not** to nest BEM elements!

--- a/src/functions/_create-selector.scss
+++ b/src/functions/_create-selector.scss
@@ -55,7 +55,7 @@
 @function _create-selector-element($name, $in-a-modifier:false) {
   @if ($in-a-modifier) {
     @return (
-      & + ">" + _create-selector-element($name)
+      & + " " + _create-selector-element($name)
     );
   }
 
